--- a/index.html
+++ b/index.html
@@ -11,15 +11,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="language-switcher">
-        <button class="lang-btn active" data-lang="en" onclick="setLanguage('en')">EN</button>
-        <button class="lang-btn" data-lang="ar" onclick="setLanguage('ar')">AR</button>
-    </div>
+    
     <a href="https://wa.me/201067770148" target="_blank" class="whatsapp-btn" title="Chat on WhatsApp"><i class="bi bi-whatsapp"></i></a>
 
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#home"><img src="logo.png" alt="DaAm.tech" height="48"></a>
+            <a class="navbar-brand" href="#home"><img src="assets/logo.png" alt="DaAm.tech" height="48"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"><i class="bi bi-list"></i></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto align-items-center">
@@ -31,6 +28,10 @@
                     <li class="nav-item ms-lg-3"><a class="btn btn-primary-custom" href="#contact" data-en="Get Support" data-ar="اطلب الدعم">Get Support</a></li>
                 </ul>
             </div>
+            <div class="language-switcher">
+        <button class="lang-btn active" data-lang="en" onclick="setLanguage('en')">EN</button>
+        <button class="lang-btn" data-lang="ar" onclick="setLanguage('ar')">AR</button>
+    </div>
         </div>
     </nav>
 
@@ -39,7 +40,7 @@
         <div class="grid-pattern"></div>
         <div class="container position-relative">
             <div class="text-center hero-content">
-                <div class="hero-logo animate-float"><img src="logo.png" alt="DaAm.tech" class="img-fluid"></div>
+                <div class="hero-logo animate-float"><img src="assets/logo.png" alt="DaAm.tech" class="img-fluid"></div>
                 <div class="hero-badge"><span class="pulse-dot"></span><span data-en="On-Demand Technical Support" data-ar="دعم فني عند الطلب">On-Demand Technical Support</span></div>
                 <h1 class="hero-title"><span class="text-white" data-en="Fix Your Tech Issues" data-ar="حل مشاكلك التقنية">Fix Your Tech Issues</span><br><span class="text-gradient-cyan" data-en="Fast" data-ar="بسرعة">Fast</span><span class="text-white" data-en=" & " data-ar=" و"> & </span><span class="text-gradient-orange" data-en="Affordable" data-ar="بسعر مناسب">Affordable</span></h1>
                 <p class="hero-subtitle" data-en="Professional support for WordPress, WooCommerce, Shopify, hosting, and cloud services. Get your technical problems solved by experts — fast." data-ar="دعم احترافي لووردبريس، ووكومرس، شوبيفاي، الاستضافة وخدمات السحابة. احصل على حل لمشاكلك التقنية بواسطة خبراء — بسرعة.">Professional support for WordPress, WooCommerce, Shopify, hosting, and cloud services. Get your technical problems solved by experts — fast.</p>
@@ -146,7 +147,7 @@
     <footer class="footer">
         <div class="container">
             <div class="row g-4">
-                <div class="col-lg-5"><img src="logo.png" alt="DaAm.tech" height="64" class="mb-4"><p class="text-muted footer-desc" data-en="Professional on-demand technical support for WordPress, e-commerce, hosting, and cloud services. Fast, affordable, and secure." data-ar="دعم فني احترافي عند الطلب لووردبريس والمتاجر الإلكترونية والاستضافة وخدمات السحابة. سريع، بسعر مناسب، وآمن.">Professional on-demand technical support for WordPress, e-commerce, hosting, and cloud services. Fast, affordable, and secure.</p><div class="social-links"><a href="#"><i class="bi bi-twitter"></i></a><a href="#"><i class="bi bi-linkedin"></i></a><a href="#"><i class="bi bi-github"></i></a><a href="mailto:support@daam.tech"><i class="bi bi-envelope"></i></a></div></div>
+                <div class="col-lg-5"><img src="assets/logo.png" alt="DaAm.tech" height="64" class="mb-4"><p class="text-muted footer-desc" data-en="Professional on-demand technical support for WordPress, e-commerce, hosting, and cloud services. Fast, affordable, and secure." data-ar="دعم فني احترافي عند الطلب لووردبريس والمتاجر الإلكترونية والاستضافة وخدمات السحابة. سريع، بسعر مناسب، وآمن.">Professional on-demand technical support for WordPress, e-commerce, hosting, and cloud services. Fast, affordable, and secure.</p><div class="social-links"><a href="#"><i class="bi bi-twitter"></i></a><a href="#"><i class="bi bi-linkedin"></i></a><a href="#"><i class="bi bi-github"></i></a><a href="mailto:support@daam.tech"><i class="bi bi-envelope"></i></a></div></div>
                 <div class="col-6 col-lg-3"><h5 data-en="Quick Links" data-ar="روابط سريعة">Quick Links</h5><ul class="footer-links"><li><a href="#services" data-en="Services" data-ar="الخدمات">Services</a></li><li><a href="#workflow" data-en="How It Works" data-ar="كيف نعمل">How It Works</a></li><li><a href="#pricing" data-en="Pricing" data-ar="الأسعار">Pricing</a></li><li><a href="#contact" data-en="Contact" data-ar="تواصل">Contact</a></li></ul></div>
                 <div class="col-6 col-lg-4"><h5 data-en="Services" data-ar="الخدمات">Services</h5><ul class="footer-links"><li><span data-en="WordPress Support" data-ar="دعم ووردبريس">WordPress Support</span></li><li><span data-en="E-commerce Fixes" data-ar="إصلاحات المتاجر">E-commerce Fixes</span></li><li><span data-en="Hosting Issues" data-ar="مشاكل الاستضافة">Hosting Issues</span></li><li><span data-en="Security Cleanup" data-ar="تنظيف وحماية">Security Cleanup</span></li></ul></div>
             </div>
